<resources>
    <string name="app_name">ModuloIII</string>
    <string name="login_username">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="login_password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="login_login">Login</string>
    <string name="main_logo">main logo</string>
    <string name="post_title">Posts</string>
    <string name="logout_option_title">Logout</string>
    <string name="new_post_option_title">New post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">New Post</string>
    <string name="post_title_hint">Post title</string>
    <string name="new_post_content">Content</string>
    <string name="create_button">Create</string>
    <string name="new_post_title">New Post</string>
</resources>
